<resources>
    <string name="app_name">智慧遙控器</string>
    <string name="root_tab_irc_text">遙控器</string>
    <string name="root_tab_kod_text">愛唱點歌</string>
    <string name="root_tab_web_text">網址導航</string>
    <string name="root_tab_mod_text">Hami影視</string>
    <string name="root_tab_more_text">更多</string>
    <string name="root_wifi_text">尚未連線</string>

    <string-array name="device_">
        <!--<item>@d</item>-->
        <!--<item>@line</item>-->
        <!--<item>@drawable.scan/</item>-->
        <item>@drawable/image_4</item>
        <item>@drawable/image_5</item>
        <item>@drawable/image_6</item>
        <item>@drawable/image_7</item>
        <item>@drawable/image_8</item>
        <item>@drawable/image_9</item>
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_4</item>
        <item>@drawable/image_5</item>
        <item>@drawable/image_6</item>
        <item>@drawable/image_7</item>
        <item>@drawable/image_8</item>
        <item>@drawable/image_9</item>
    </string-array>


    <array name="scan_list">
        <item>@drawable/scan1</item>
        <item>@drawable/scan2</item>
        <item>@drawable/scan3</item>
        <item>@drawable/scan4</item>
        <item>@drawable/scan5</item>
        <item>@drawable/scan6</item>
        <item>@drawable/scan7</item>
        <item>@drawable/scan8</item>

    </array>
</resources>
