<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_irc"
        android:enabled="true"
        android:icon="@drawable/root_tab_irc_icon"
        android:title="@string/root_tab_irc_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_kod"
        android:enabled="true"
        android:icon="@drawable/root_tab_kod_icon"
        android:title="@string/root_tab_kod_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_mod"
        android:enabled="true"
        android:icon="@drawable/root_tab_mod_icon"
        android:title="@string/root_tab_mod_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_web"
        android:enabled="true"
        android:icon="@drawable/root_tab_web_icon"
        android:title="@string/root_tab_web_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_more"
        android:enabled="true"
        android:icon="@drawable/root_tab_more_icon"
        android:title="@string/root_tab_more_text"
        app:showAsAction="ifRoom" />
</menu>